--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css"
     />
-    <title>Landing | Tailwind Starter Kit by Creative Tim</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
+    <title>Foodiliser | A Step Closer to Environmental Health</title>
   </head>
   <body class="text-gray-800 antialiased">
     <noscript>You need to enable JavaScript to run this app.</noscript>
